unpackaged/main/default/objects/ET_Location__c/ET_Location__c.object-meta.xml
<CustomObject>
    <label>Inspection Center</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ET Loaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>