unpackaged/main/default/objects/ET_Location__c/fields/Available_Services__c.field-meta.xml
<CustomField>
    <fullName>Available_Services__c</fullName>
    <label>Available Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Police Inspection</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>