unpackaged/main/default/objects/ET_Location__c/fields/ETSALES_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Emirates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>