unpackaged/main/default/objects/ET_Location__c/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <description>to capture maximum rage of Service Location for service area</description>
    <label>Maximum Location Range</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>