unpackaged/main/default/objects/ET_Location__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <description>to capture minimum range for latitude for service location</description>
    <label>Minimum Location Range</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>