unpackaged/main/default/objects/ET_Location__c/fields/Operations_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Operations_Queue_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operations Queue Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>