unpackaged/main/default/objects/ET_Location__c/recordTypes/Inspection_Center.recordType-meta.xml
<RecordType>
    <fullName>Inspection_Center</fullName>
    <active>true</active>
    <label>Inspection Center</label>
</RecordType>