unpackaged/main/default/objects/ET_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Code__c</columns>
    <columns>ETSALES_Emirates__c</columns>
    <columns>ETSALES_Region__c</columns>
    <columns>ETSALES_Zone__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>