unpackaged/main/default/objects/ET_Location__c/listViews/Inspection_Centers.listView-meta.xml
<ListView>
    <fullName>Inspection_Centers</fullName>
    <columns>NAME</columns>
    <columns>Location_Code__c</columns>
    <columns>Region__c</columns>
    <columns>Zone__c</columns>
    <columns>Emirates__c</columns>
    <columns>Available_Services__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zone__c</field>
        <operation>equals</operation>
        <value>TC</value>
    </filters>
    <label>Inspection Centers</label>
</ListView>